2011-11-09 Julien Nicoulaud <julien.nicoulaud@gmail.com>

	* 20111109-1 :
	Initial release of the package.
