@@ -2,7 +2,7 @@
 # Contributor: Xemertix <arch88(at)katamail(dot)com>
 
 pkgname=osiris-sps
-pkgver=0.14
+pkgver=0.15
 pkgrel=1
 pkgdesc="An anonymous p2p serverless portal system."
 arch=('i686' 'x86_64')
@@ -15,11 +15,11 @@ source=(http://www.osiris-sps.org/repository/osiris_${pkgver}_linux_i386.tar.gz
         'osiris-sps.desktop'
         'osiris-sps.png'
         'system.xml')
-md5sums=('ceae7870ea9dbd9e913ede8423d278c1'
-         'eb019a6e1f1a949d23a889a27c5e6d97'
-         'ceddbf0fdf6213bb342994b980cb1ee8'
-         '11970c1304efd8b2f956898b801b9e2f'
-         'd3c7192a3dd32b8e3d4f5b4c7c866110')
+sha256sums=('1ed7a6ebde432859c8f4d50478275d872e9ec18df9c4ecd56d5e222c73211150'
+            'cc1ab7a1bae638f3112636e8c83c84d00a5710aaf15f15b79694d5d7417b958f'
+            'f225d2363014749981f91c01a7bf99d385831957027b0cee0155124830047b92'
+            '16f68e3d889427c62052ab2213fec19e8a00025bb4dad8f964264c9eb0d49fcf'
+            '98e79dce08cc29884d428f17d54b7dac264651c881e46dfd6a09354364b315e8')
 
 [ "$CARCH" = "x86_64" ] && \
 source=(http://www.osiris-sps.org/repository/osiris_${pkgver}_linux_x86_64.tar.gz
@@ -27,11 +27,11 @@ source=(http://www.osiris-sps.org/repository/osiris_${pkgver}_linux_x86_64.tar.g
         'osiris-sps.desktop'
         'osiris-sps.png'
         'system.xml') && \
-md5sums=('ceae7870ea9dbd9e913ede8423d278c1'
-         'eb019a6e1f1a949d23a889a27c5e6d97'
-         'ceddbf0fdf6213bb342994b980cb1ee8'
-         '11970c1304efd8b2f956898b801b9e2f'
-         'd3c7192a3dd32b8e3d4f5b4c7c866110')
+sha256sums=('1ed7a6ebde432859c8f4d50478275d872e9ec18df9c4ecd56d5e222c73211150'
+            'cc1ab7a1bae638f3112636e8c83c84d00a5710aaf15f15b79694d5d7417b958f'
+            'f225d2363014749981f91c01a7bf99d385831957027b0cee0155124830047b92'
+            '16f68e3d889427c62052ab2213fec19e8a00025bb4dad8f964264c9eb0d49fcf'
+            '98e79dce08cc29884d428f17d54b7dac264651c881e46dfd6a09354364b315e8')
 
 build() {
   cd $srcdir
