@@ -1,3 +1,11 @@
+2011-12-02 Julien Nicoulaud <julien.nicoulaud@gmail.com>
+
+	* 20111202-1 :
+	Fix typos in install script.
+	Generate scripts in build().
+	Strip python distribution from package.
+	Make check() run tests.
+
 2011-11-09 Julien Nicoulaud <julien.nicoulaud@gmail.com>
 
 	* 20111109-1 :
